[package]
name = "cargo-atcoder"
version = "0.4.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo subcommand for AtCoder"
repository = "https://github.com/tanakh/cargo-atcoder"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "procon"]

[features]
watch = ["notify"]

[dependencies]
anyhow = "1.0.98"
bytesize = "2.0.1"
cargo_metadata = "0.20.0"
chrono = "0.4.41"
console = "0.16.0"
data-encoding = "2.9.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
futures = "0.3.31"
indicatif = "0.18.0"
itertools = "0.14.0"
once_cell = "1.21.3"
notify = { version = "8.1.0", optional = true }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["cookies"] }
scraper = "0.23.1"
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.10.9"
structopt = "0.3.26"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
toml_edit = "0.22.27"
unicode-width = "0.2.1"
url = "2.2.2"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
maplit = "1.0.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempdir = "0.3.7"
